--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q5.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/q5.xhtml
@@ -24,8 +24,7 @@
                                   layout="pageDirection">
                     <p:ajax listener="#{uobpb.onChangeValue}"
                             update=":ceForm:graphArea, :ceForm:buttonArea"/>
-                    <f:selectItem id="q5rc1" itemLabel="Your primary focus is on capital growth. You are prepared to accept a high level of short term volatility
-                     and possible capital losses in order to generate potentially higher levels of capital growth over the long term.
+                    <f:selectItem id="q5rc1" itemLabel="Your primary focus is on capital growth. You are prepared to accept a high level of short term volatility                     and possible capital losses in order to generate potentially higher levels of capital growth over the long term.
 " itemValue="1"/>
                     <f:selectItem  id="q5rc2" itemLabel="You require your investments to be a balance between capital growth and income generating assets.
 " itemValue="2"/>
