--- a/Invessence/modules/web/src/main/webapp/login.xhtml
+++ b/Invessence/modules/web/src/main/webapp/login.xhtml
@@ -14,13 +14,13 @@
 
         <div id="layout-portlets-cover">
             <div class="EmptyBox50"></div>
-            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10"
+            <div class="other-pages-box Container40 Responsive50 MarAuto Fnone TexAlCenter ShadowGray MarTop10 customBlockLogin"
                  style="margin-top:5%; background-image:url(/spark/resources/spark-layout/images/loginpageillust.svg); background-repeat:no-repeat; background-position:center; background-size:cover;">
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <h:form id="logonForm" prependId="false" styleClass="formPage">
                         <div class="EmptyBox50"></div>
                         <h:graphicImage id="logo" name="#{uiLayout.logo}" styleClass="Fleft" library="invessence"
-                                        class="MarAuto MarTop20 MarBot10"/>
+                                        class="MarAuto MarTop20 MarBot10 sitelogologin"/>
                         <div class="EmptyBox20"></div>
                         <p:messages id="messages" autoUpdate="true"/>
                         <p:inputText id="j_username" placeholder="Username" style="background: #f2f2f2;" styleClass="Container80 Fnone MarAuto Fs18"
@@ -45,14 +45,15 @@
                                      rendered="#{loginController.needAdditionalInfo}">
                         </h:inputText>
                         <div class="EmptyBox20"></div>
-                        <h:commandButton styleClass="Fs16"
-                                         type="submit" id="login" image="images/login.png"
-                                         action="#{loginController.doLogin}"/>
+                        <h:commandButton styleClass="Fs16 loginBtnInv"
+                                         type="submit" id="login" value="Login" icon=""
+                                         action="#{loginController.doLogin}"></h:commandButton>
+
                         <div class="EmptyBox10"></div>
                         <div class="Seperator"></div>
                         <div class="EmptyBox10"></div>
-                        <p:button  value="Forgot Password ?" styleClass="Fs16 RedButton" href="/forgot.xhtml"></p:button>
-                        <p:button  value="Register" styleClass="Fs16 OrangeButton" href="/signup.xhtml?a=Y"></p:button>
+                        <p:button  value="Forgot Password ?" styleClass="Fs16 RedButton FgtPwdBtn" href="/forgot.xhtml"></p:button>
+                        <p:button  value="Register" styleClass="Fs16 OrangeButton uob_button" href="/signup.xhtml?a=Y"></p:button>
                         <div class="EmptyBox50"></div>
                     </h:form>
                 </div>
