--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/tdconfirmation.xhtml
@@ -27,8 +27,8 @@
 							<h3 class="FsRes14">
 								You will receive two emails from DocuSign, a leading
 								secure e-signature company, with forms requiring your
-								electronic signature:
-								1) Tradition Capital Management Advisory Agreement with other required disclosures and
+								electronic signature:<br/>
+								1) Tradition Capital Management Advisory Agreement with other required disclosures<br/>and<br/>
 								2) TD Ameritrade Institutional Application Documents.
 							</h3>
 
