--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/creports.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/creports.xhtml
@@ -38,7 +38,7 @@
                     <div class="Container60 ">
                         <p:panel id="workArea" style="border:0px !important; background:none;">
                             <p:growl id="reportGrowl" showDetail="true" sticky="true" escape="true"/>
-                            <p:dataTable var="report" value="#{uobreportBean.filterReportList}"
+                            <p:dataTable var="report" value="#{reportBean.filterReportList}"
                                          emptyMessage="No report found."
                                          reflow="true">
 
@@ -64,15 +64,10 @@
 
                                    </ui:fragment>
                                     <ui:fragment rendered="#{report.isPdf}">
-                                        <p:commandButton rendered="#{report.isPdf}"
-                                                         styleClass="Fs16 GreenButton"
-                                                         process="@this" immediate="true"
-                                                         icon="fa fa-save Fs14 white"
-                                                         value="Download"
-                                                         action="#{uobreportBean.downloadReport}">
-                                            <f:setPropertyActionListener value="#{report}"
-                                                                         target="#{uobreportBean.selectReport}"/>
-                                        </p:commandButton>
+                                        <p:commandLink value="Download" ajax="false">
+                                            <p:fileDownload value="#{report.downloadfile}"/>
+                                            <h:graphicImage value="/images/pdf.png" />
+                                        </p:commandLink>
                                 </ui:fragment>
 
                             </p:column>
