--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/addon/cEdit.xhtml
@@ -58,6 +58,16 @@
                         </p:commandButton>
                     </div>
                 </div>
+                <div class="Container100 TexAlCenter">
+                    <div class="ContainerIndent">
+                        <p:commandButton value="Save"
+                                         styleClass="uob_button">
+                        </p:commandButton>
+                        <p:commandButton value="Cancel"
+                                         styleClass="uob_button">
+                        </p:commandButton>
+                    </div>
+                </div>
             </div>
         </p:panel>
 
