Prashant 05/08/2017 -New code for testing

--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/portfolioedit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/portfolioedit.xhtml
@@ -68,43 +68,32 @@
                                           <ui:include src="/pages/consumer/tcm/cadd/p5.xhtml" />
                                       </ui:fragment>
                                       <ui:fragment rendered="#{tcmpb.pagemanager.page == 5}">
-                                          <ui:include src="/pages/consumer/tcm/cadd/page7A.xhtml" />
+                                          <ui:include src="/pages/consumer/tcm/cadd/portfolioreview.xhtml" />
                                       </ui:fragment>
-
-                                        <ui:fragment rendered="#{tcmpb.pagemanager.page == 6}">
-                                            <ui:include src="/pages/consumer/tcm/cadd/page9.xhtml" />
-                                        </ui:fragment>
+                                      <ui:fragment rendered="#{tcmpb.pagemanager.page == 6}">
+                                            <ui:include src="/pages/consumer/tcm/cadd/confirmedit.xhtml" />
+                                      </ui:fragment>
                                 </div>
                             </div>
 
                             <div class="Container100">
                                 <p style="font-style: italic; font-size: .8em; text-align: justify; margin-bottom: 0px;">
-                                    This content is developed from sources believed to be providing
-                                    accurate information. The information provided is not written or
-                                    intended as direct investment advice or recommendations, tax or
-                                    legal advice and in the context of such may not especially be relied
-                                    on for purposes of avoiding any tax penalties in any jurisdiction.
-                                    Individuals are encouraged to seek advice from their own respective
-                                    tax, legal, accounting, or personal planning professional as the
-                                    case may be. Individuals involved in the estate planning process
-                                    should work with estate planning professionals. Neither the
-                                    information presented nor any opinion expressed constitutes a
-                                    representation by us of a specific investment or the purchase or
-                                    sale of any securities. Asset allocation and diversification do not
-                                    ensure a profit or protect against loss in declining markets. For
-                                    illustrative purposes only to show possible return profiles of
-                                    various asset classes. This illustration is not historical returns
-                                    nor is it a projection of future returns. Past performance is not
-                                    indicative of future results. Investing involves risk and may result
-                                    in losses. At a given time, any risk asset class or asset may lose
-                                    value and result in substantial losses. Inflation risk is an
-                                    additional risk for financial assets. This illustration is not GIPS
-                                    compliant and is shown only for illustrative purposes. Tradition
-                                    Capital Management does not make any assertions, estimates or
-                                    guarantees about future results. Future results are unpredictable
-                                    and could result in losses. Expected return and expected risk are
-                                    not forecasted returns or risks but are only statistical definitions
-                                    for modeling purposes.</p>
+                                    Tradition Capital Management, LLC (Tradition) is an SEC (Securities and Exchange Commission)
+                                    Registered Investment Adviser under the Federal Investment Advisers Act and provides portfolio
+                                    management and related services for a fee. Nothing in this website should be considered a
+                                    solicitation to buy or an offer to sell shares of any security or service in any jurisdiction
+                                    where the offer or solicitation would be unlawful under the securities laws of such jurisdiction.
+                                    Investing in stocks and other risk assets could result in losses and positive returns are not
+                                    guaranteed. Diversification only reduces risk of capital loss but does not eliminate these risks.
+                                    Expected returns, expected risk, and long-term targeted returns are not forecasted returns or
+                                    risks but are only statistical definitions for modeling purposes. Actual results could vary
+                                    materially from these returns and could result in losses. Financial assets are also exposed
+                                    to potential inflation and liquidity risks. Past performance is not indicative of future
+                                    results, and all investments could lose value in the future. At a given time, any risk
+                                    asset class or asset may lose value and result in substantial losses. Tradition does not
+                                    make any assertions, estimates or guarantees about future results. Copies of the ADV and
+                                    Privacy policy are available upon request or through these links.
+                                </p>
                             </div>
                         </p:panel>
                     </div>
